--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,6 +15,7 @@ Django==5.2.8
 django-cors-headers==4.9.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+gunicorn==23.0.0
 hyperlink==21.0.0
 idna==3.11
 incremental==24.7.2
@@ -40,4 +41,5 @@ txaio==25.9.2
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
+whitenoise==6.11.0
 zope.interface==8.1.1
